# mapologo-pokeapi

./: .gitignore  README.md  pyproject.toml
pokemap/: manage.py
pokemap/pokemap/: asgi.py  settings.py  urls.py  wsgi.py
pokemap/pokesearch/: admin.py  apps.py  models.py  tests.py  views.py
pokemap/pokesearch/management/commands/: get_pokemons.py
pokemap/pokesearch/migrations/: 0001_initial.py  0002_auto_20210204_0323.py  0003_auto_20210204_0403.py
pokemap/templates/: base.html  home.html  search_results.html
pokemap/ui/: package-lock.json  package.json  vue.config.js
