[tool.poetry]
name = "mapologo-pokeapi"
version = "0.1.0"
description = "Yet another Pokeapi app by mapologo."
authors = ["Francisco Palm <fpalm@qu4nt.com>"]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.6"
django-webpack-loader = "^0.7.0"
pylint = "^2.6.0"
pip = "^21.0.1"
requests = "^2.25.1"
requests-cache = "^0.5.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
django-debug-toolbar = "^3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
